# onnx-sandbox

./: README.md  build.py  pyproject.toml  setup.py
csrc/my_autograd/: attention_kernel.cpp  attention_kernel.hpp  attention_value_kernel.cu  attention_weight_kernel.cu  my_attention.cpp
csrc/my_func/: add.cpp
csrc/my_ops/: add.cpp  warp.cpp
onnx_sandbox/: add_op.py  registry.py
